--- a/Makefile.am
+++ b/Makefile.am
@@ -23,12 +23,12 @@ endif
 bin_PROGRAMS = test_ekho ekho
 
 ekho_SOURCES = src/ekho.cpp
-ekho_LDADD = libekho.a $(LIBEKHO_LIB) @LIB_GTK2@ ../libmusicxml/libmusicxml2.a
+ekho_LDADD = libekho.a $(LIBEKHO_LIB) @LIB_GTK2@ $(srcdir)/libmusicxml/libmusicxml2.a
 ekho_CXXFLAGS = @CFLAG_GTK2@ -I$(srcdir)/utfcpp/source -I$(srcdir)/sonic -pthread @CFLAG_FRISO@ -lstdc++
 	
 test_ekho_SOURCES = src/test_ekho.cpp
 test_ekho_CXXFLAGS = -I$(srcdir)/utfcpp/source -I$(srcdir)/sonic @CFLAG_FRISO@
-test_ekho_LDADD = libekho.a $(LIBEKHO_LIB) ../libmusicxml/libmusicxml2.a
+test_ekho_LDADD = libekho.a $(LIBEKHO_LIB) $(srcdir)/libmusicxml/libmusicxml2.a
 
 DATA_DIR = $(srcdir)/ekho-data
 DATA_FILES = $(DATA_DIR)/zhy_list $(DATA_DIR)/zh_list $(DATA_DIR)/zh_listx $(DATA_DIR)/zh_patch $(DATA_DIR)/zhy.dict $(DATA_DIR)/zh.dict $(DATA_DIR)/ka_list $(DATA_DIR)/bo_list $(DATA_DIR)/ko_list $(DATA_DIR)/ngangien_list $(DATA_DIR)/pinyin.index $(DATA_DIR)/pinyin.voice $(DATA_DIR)/jyutping.index $(DATA_DIR)/jyutping.voice $(DATA_DIR)/toisanese_list
@@ -62,19 +62,27 @@ endif
 	cp -R $(srcdir)/utfcpp $(distdir)/
 	cp -R $(srcdir)/sonic $(distdir)/
 	cp -R $(srcdir)/speechd-api $(distdir)/
+	cp -R $(srcdir)/libmusicxml $(distdir)/
 	cp $(srcdir)/install.pl $(distdir)/
 	cp $(srcdir)/deploy.sh $(distdir)/
 	find $(distdir) -name ".svn" | xargs rm -rf
 	find $(distdir) -name ".git" | xargs rm -rf
 
-if ENABLE_SPEECHD
 clean-hook:
+	cd $(srcdir)/libmusicxml/linux && make clean
+if ENABLE_SPEECHD
 	cd $(srcdir)/speechd-api && make clean
+endif
+
+all: all-local
 
 all-local:
+	cd $(srcdir)/libmusicxml/linux && make
+if ENABLE_SPEECHD
 	cd $(srcdir)/speechd-api && ./build.sh && ./configure --libdir=/usr && make
-	cd $(srcdir)/libmusicxml && ./build.sh && ./configure --libdir=/usr && make
+endif
 
+if ENABLE_SPEECHD
 install: install-am
 	cp $(srcdir)/speechd-api/src/modules/.libs/sd_ekho /usr/lib/speech-dispatcher-modules/
 	cp $(srcdir)/speechd-api/config/modules/ekho.conf /etc/speech-dispatcher/modules/
