--- a/speechd-api/config.h.in
+++ b/speechd-api/config.h.in
@@ -83,6 +83,9 @@
 /* Define to 1 if you have the <netinet/in.h> header file. */
 #undef HAVE_NETINET_IN_H
 
+/* Define if you have libpulse */
+#undef HAVE_PULSEAUDIO
+
 /* Define to 1 if your system has a GNU libc compatible `realloc' function,
    and to 0 otherwise. */
 #undef HAVE_REALLOC
