--- a/speechd-api/src/modules/Makefile.in
+++ b/speechd-api/src/modules/Makefile.in
@@ -108,10 +108,10 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 modulebin_PROGRAMS = sd_dummy$(EXEEXT) sd_generic$(EXEEXT) \
-	sd_festival$(EXEEXT) sd_cicero$(EXEEXT) $(am__EXEEXT_1) \
-	$(am__EXEEXT_2) $(am__EXEEXT_3) $(am__EXEEXT_4) \
-	$(am__EXEEXT_5) $(am__EXEEXT_6) $(am__EXEEXT_7) \
-	$(am__EXEEXT_8)
+	sd_festival$(EXEEXT) sd_cicero$(EXEEXT) sd_ekho$(EXEEXT) \
+	$(am__EXEEXT_1) $(am__EXEEXT_2) $(am__EXEEXT_3) \
+	$(am__EXEEXT_4) $(am__EXEEXT_5) $(am__EXEEXT_6) \
+	$(am__EXEEXT_7) $(am__EXEEXT_8)
 @flite_support_TRUE@am__append_1 = sd_flite
 @ibmtts_support_TRUE@am__append_2 = sd_ibmtts
 @ibmtts_shim_TRUE@@ibmtts_support_TRUE@am__append_3 = -L.
@@ -186,6 +186,17 @@ am_sd_dummy_OBJECTS = dummy.$(OBJEXT) $(am__objects_1) \
 sd_dummy_OBJECTS = $(am_sd_dummy_OBJECTS)
 sd_dummy_DEPENDENCIES = $(top_builddir)/src/common/libcommon.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_2)
+am_sd_ekho_OBJECTS = sd_ekho-ekho.$(OBJEXT) $(am__objects_1) \
+	$(am__objects_2)
+sd_ekho_OBJECTS = $(am_sd_ekho_OBJECTS)
+sd_ekho_DEPENDENCIES = $(EKHO_ROOT)/libekho.a \
+	$(EKHO_ROOT)/libmusicxml/libmusicxml2.a \
+	$(top_builddir)/src/common/libcommon.la $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_2)
+sd_ekho_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(sd_ekho_CXXFLAGS) \
+	$(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 am__sd_espeak_SOURCES_DIST = espeak.c spd_audio.c spd_audio.h \
 	module_main.c module_utils.c module_utils.h \
 	module_utils_speak_queue.c
@@ -306,6 +317,7 @@ am__depfiles_remade = ./$(DEPDIR)/baratinoo.Po ./$(DEPDIR)/cicero.Po \
 	./$(DEPDIR)/module_utils.Po \
 	./$(DEPDIR)/module_utils_addvoice.Po \
 	./$(DEPDIR)/module_utils_speak_queue.Po ./$(DEPDIR)/pico.Po \
+	./$(DEPDIR)/sd_ekho-ekho.Po \
 	./$(DEPDIR)/sd_espeak_ng-espeak-ng.Po \
 	./$(DEPDIR)/sd_espeak_ng-module_main.Po \
 	./$(DEPDIR)/sd_espeak_ng-module_utils.Po \
@@ -352,16 +364,17 @@ am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
 SOURCES = $(sd_baratinoo_SOURCES) $(sd_cicero_SOURCES) \
-	$(sd_dummy_SOURCES) $(sd_espeak_SOURCES) \
+	$(sd_dummy_SOURCES) $(sd_ekho_SOURCES) $(sd_espeak_SOURCES) \
 	$(sd_espeak_ng_SOURCES) $(sd_festival_SOURCES) \
 	$(sd_flite_SOURCES) $(sd_generic_SOURCES) $(sd_ibmtts_SOURCES) \
 	$(sd_ivona_SOURCES) $(sd_kali_SOURCES) $(sd_pico_SOURCES)
 DIST_SOURCES = $(am__sd_baratinoo_SOURCES_DIST) $(sd_cicero_SOURCES) \
-	$(sd_dummy_SOURCES) $(am__sd_espeak_SOURCES_DIST) \
-	$(am__sd_espeak_ng_SOURCES_DIST) $(sd_festival_SOURCES) \
-	$(am__sd_flite_SOURCES_DIST) $(sd_generic_SOURCES) \
-	$(am__sd_ibmtts_SOURCES_DIST) $(am__sd_ivona_SOURCES_DIST) \
-	$(am__sd_kali_SOURCES_DIST) $(am__sd_pico_SOURCES_DIST)
+	$(sd_dummy_SOURCES) $(sd_ekho_SOURCES) \
+	$(am__sd_espeak_SOURCES_DIST) $(am__sd_espeak_ng_SOURCES_DIST) \
+	$(sd_festival_SOURCES) $(am__sd_flite_SOURCES_DIST) \
+	$(sd_generic_SOURCES) $(am__sd_ibmtts_SOURCES_DIST) \
+	$(am__sd_ivona_SOURCES_DIST) $(am__sd_kali_SOURCES_DIST) \
+	$(am__sd_pico_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -432,6 +445,7 @@ AWK = @AWK@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CFLAG_PULSEAUDIO = @CFLAG_PULSEAUDIO@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
@@ -485,6 +499,7 @@ LIBINTL = @LIBINTL@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
+LIB_PULSEAUDIO = @LIB_PULSEAUDIO@
 LIB_SPD_AGE = @LIB_SPD_AGE@
 LIB_SPD_CURRENT = @LIB_SPD_CURRENT@
 LIB_SPD_REVISION = @LIB_SPD_REVISION@
@@ -634,6 +649,16 @@ AM_CPPFLAGS = $(inc_local) -DDATADIR=\"$(snddatadir)\" -D_GNU_SOURCE \
 	$(DOTCONF_CFLAGS) $(GLIB_CFLAGS) $(GTHREAD_CFLAGS) \
 	$(ibmtts_include) $(SNDFILE_CFLAGS)
 
+EKHO_ROOT = ../../..
+sd_ekho_SOURCES = ekho.cc $(audio_SOURCES) $(common_SOURCES)
+sd_ekho_CXXFLAGS = -DESPEAK_NG_INCLUDE $(ESPEAK_NG_CFLAGS) -I$(EKHO_ROOT)/src -I$(EKHO_ROOT)/utfcpp/source -I$(EKHO_ROOT)/sonic 
+sd_ekho_LDADD = $(EKHO_ROOT)/libekho.a $(EKHO_ROOT)/libmusicxml/libmusicxml2.a -lvorbisenc -lvorbis -lm -logg \
+	@LIB_PULSEAUDIO@  $(MP3LAME_LIBS) \
+	$(top_builddir)/src/common/libcommon.la \
+	$(audio_dlopen_modules) \
+	$(ESPEAK_NG_LIBS) $(EXTRA_ESPEAK_LIBS) \
+	$(common_LDADD)
+
 sd_dummy_SOURCES = dummy.c $(audio_SOURCES) $(common_SOURCES) \
 	module_utils_addvoice.c
 
@@ -721,7 +746,7 @@ sd_cicero_LDADD = $(top_builddir)/src/common/libcommon.la \
 all: all-am
 
 .SUFFIXES:
-.SUFFIXES: .c .cpp .lo .o .obj
+.SUFFIXES: .c .cc .cpp .lo .o .obj
 $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
@@ -813,6 +838,10 @@ sd_dummy$(EXEEXT): $(sd_dummy_OBJECTS) $(sd_dummy_DEPENDENCIES) $(EXTRA_sd_dummy
 	@rm -f sd_dummy$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(sd_dummy_OBJECTS) $(sd_dummy_LDADD) $(LIBS)
 
+sd_ekho$(EXEEXT): $(sd_ekho_OBJECTS) $(sd_ekho_DEPENDENCIES) $(EXTRA_sd_ekho_DEPENDENCIES) 
+	@rm -f sd_ekho$(EXEEXT)
+	$(AM_V_CXXLD)$(sd_ekho_LINK) $(sd_ekho_OBJECTS) $(sd_ekho_LDADD) $(LIBS)
+
 sd_espeak$(EXEEXT): $(sd_espeak_OBJECTS) $(sd_espeak_DEPENDENCIES) $(EXTRA_sd_espeak_DEPENDENCIES) 
 	@rm -f sd_espeak$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(sd_espeak_OBJECTS) $(sd_espeak_LDADD) $(LIBS)
@@ -871,6 +900,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/module_utils_addvoice.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/module_utils_speak_queue.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pico.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sd_ekho-ekho.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sd_espeak_ng-espeak-ng.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sd_espeak_ng-module_main.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sd_espeak_ng-module_utils.Po@am__quote@ # am--include-marker
@@ -1021,6 +1051,55 @@ sd_kali-module_utils.obj: module_utils.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o sd_kali-module_utils.obj `if test -f 'module_utils.c'; then $(CYGPATH_W) 'module_utils.c'; else $(CYGPATH_W) '$(srcdir)/module_utils.c'; fi`
 
+.cc.o:
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXXCOMPILE) -c -o $@ $<
+
+.cc.obj:
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ `$(CYGPATH_W) '$<'`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXXCOMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
+
+.cc.lo:
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(LTCXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(LTCXXCOMPILE) -c -o $@ $<
+
+sd_ekho-ekho.o: ekho.cc
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(sd_ekho_CXXFLAGS) $(CXXFLAGS) -MT sd_ekho-ekho.o -MD -MP -MF $(DEPDIR)/sd_ekho-ekho.Tpo -c -o sd_ekho-ekho.o `test -f 'ekho.cc' || echo '$(srcdir)/'`ekho.cc
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/sd_ekho-ekho.Tpo $(DEPDIR)/sd_ekho-ekho.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='ekho.cc' object='sd_ekho-ekho.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(sd_ekho_CXXFLAGS) $(CXXFLAGS) -c -o sd_ekho-ekho.o `test -f 'ekho.cc' || echo '$(srcdir)/'`ekho.cc
+
+sd_ekho-ekho.obj: ekho.cc
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(sd_ekho_CXXFLAGS) $(CXXFLAGS) -MT sd_ekho-ekho.obj -MD -MP -MF $(DEPDIR)/sd_ekho-ekho.Tpo -c -o sd_ekho-ekho.obj `if test -f 'ekho.cc'; then $(CYGPATH_W) 'ekho.cc'; else $(CYGPATH_W) '$(srcdir)/ekho.cc'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/sd_ekho-ekho.Tpo $(DEPDIR)/sd_ekho-ekho.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='ekho.cc' object='sd_ekho-ekho.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(sd_ekho_CXXFLAGS) $(CXXFLAGS) -c -o sd_ekho-ekho.obj `if test -f 'ekho.cc'; then $(CYGPATH_W) 'ekho.cc'; else $(CYGPATH_W) '$(srcdir)/ekho.cc'; fi`
+
+sd_kali-kali.o: kali.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT sd_kali-kali.o -MD -MP -MF $(DEPDIR)/sd_kali-kali.Tpo -c -o sd_kali-kali.o `test -f 'kali.cpp' || echo '$(srcdir)/'`kali.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/sd_kali-kali.Tpo $(DEPDIR)/sd_kali-kali.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='kali.cpp' object='sd_kali-kali.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o sd_kali-kali.o `test -f 'kali.cpp' || echo '$(srcdir)/'`kali.cpp
+
+sd_kali-kali.obj: kali.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT sd_kali-kali.obj -MD -MP -MF $(DEPDIR)/sd_kali-kali.Tpo -c -o sd_kali-kali.obj `if test -f 'kali.cpp'; then $(CYGPATH_W) 'kali.cpp'; else $(CYGPATH_W) '$(srcdir)/kali.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/sd_kali-kali.Tpo $(DEPDIR)/sd_kali-kali.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='kali.cpp' object='sd_kali-kali.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o sd_kali-kali.obj `if test -f 'kali.cpp'; then $(CYGPATH_W) 'kali.cpp'; else $(CYGPATH_W) '$(srcdir)/kali.cpp'; fi`
+
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
 @am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Po
@@ -1041,20 +1120,6 @@ sd_kali-module_utils.obj: module_utils.c
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(LTCXXCOMPILE) -c -o $@ $<
-
-sd_kali-kali.o: kali.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT sd_kali-kali.o -MD -MP -MF $(DEPDIR)/sd_kali-kali.Tpo -c -o sd_kali-kali.o `test -f 'kali.cpp' || echo '$(srcdir)/'`kali.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/sd_kali-kali.Tpo $(DEPDIR)/sd_kali-kali.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='kali.cpp' object='sd_kali-kali.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o sd_kali-kali.o `test -f 'kali.cpp' || echo '$(srcdir)/'`kali.cpp
-
-sd_kali-kali.obj: kali.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT sd_kali-kali.obj -MD -MP -MF $(DEPDIR)/sd_kali-kali.Tpo -c -o sd_kali-kali.obj `if test -f 'kali.cpp'; then $(CYGPATH_W) 'kali.cpp'; else $(CYGPATH_W) '$(srcdir)/kali.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/sd_kali-kali.Tpo $(DEPDIR)/sd_kali-kali.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='kali.cpp' object='sd_kali-kali.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(sd_kali_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o sd_kali-kali.obj `if test -f 'kali.cpp'; then $(CYGPATH_W) 'kali.cpp'; else $(CYGPATH_W) '$(srcdir)/kali.cpp'; fi`
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -1228,6 +1293,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/module_utils_addvoice.Po
 	-rm -f ./$(DEPDIR)/module_utils_speak_queue.Po
 	-rm -f ./$(DEPDIR)/pico.Po
+	-rm -f ./$(DEPDIR)/sd_ekho-ekho.Po
 	-rm -f ./$(DEPDIR)/sd_espeak_ng-espeak-ng.Po
 	-rm -f ./$(DEPDIR)/sd_espeak_ng-module_main.Po
 	-rm -f ./$(DEPDIR)/sd_espeak_ng-module_utils.Po
@@ -1299,6 +1365,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/module_utils_addvoice.Po
 	-rm -f ./$(DEPDIR)/module_utils_speak_queue.Po
 	-rm -f ./$(DEPDIR)/pico.Po
+	-rm -f ./$(DEPDIR)/sd_ekho-ekho.Po
 	-rm -f ./$(DEPDIR)/sd_espeak_ng-espeak-ng.Po
 	-rm -f ./$(DEPDIR)/sd_espeak_ng-module_main.Po
 	-rm -f ./$(DEPDIR)/sd_espeak_ng-module_utils.Po
