--- a/sapi5/ttseng.vcproj
+++ b/sapi5/ttseng.vcproj
@@ -155,7 +155,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;D:\ekho\common\sr-convert&quot;;D:\ekho\sapi5\include\festival;D:\ekho\sapi5\include\speech_tools;D:\ekho\sonic;D:\ekho\sapi5;D:\ekho\src;D:\ekho\common\utfcpp\source;&quot;C:\Program Files\Mega-Nerd\libsndfile\include&quot;;&quot;C:\Program Files\Microsoft Speech SDK 5.1\Include&quot;"
+				AdditionalIncludeDirectories="D:\ekho\sapi5\include\festival;D:\ekho\sapi5\include\speech_tools;D:\ekho\sonic;D:\ekho\sapi5;D:\ekho\src;D:\ekho\utfcpp\source;&quot;C:\Program Files\Mega-Nerd\libsndfile\include&quot;;&quot;C:\Program Files\Microsoft Speech SDK 5.1\Include&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;SYSTEM_IS_WIN32;NO_SSE;_WIN32_WINNT"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -188,7 +188,7 @@
 				OutputFile=".\Debug_x86/ekho_sapi5.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="D:\ekho\sapi5\lib32\debug;C:\Boost\lib;&quot;C:\Program Files\Mega-Nerd\libsndfile&quot;;&quot;C:\Program Files\Microsoft Speech SDK 5.1\Lib\i386&quot;"
+				AdditionalLibraryDirectories="D:\ekho\sapi5\lib32\debug;&quot;C:\Program Files\Mega-Nerd\libsndfile&quot;;&quot;C:\Program Files\Microsoft Speech SDK 5.1\Lib\i386&quot;"
 				IgnoreDefaultLibraryNames="libcmt.lib"
 				ModuleDefinitionFile=".\TtsEng.def"
 				GenerateDebugInformation="true"
@@ -236,10 +236,6 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-				RelativePath="..\common\sr-convert\dsp.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\src\ekho_dict.cpp"
 				>
 			</File>
@@ -248,32 +244,12 @@
 				>
 			</File>
 			<File
-				RelativePath="..\sonic\sonic.c"
+				RelativePath="..\src\phonetic_symbol.cpp"
 				>
 			</File>
 			<File
-				RelativePath="StdAfx.cpp"
+				RelativePath="..\sonic\sonic.c"
 				>
-				<FileConfiguration
-					Name="Release x86|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						UsePrecompiledHeader="1"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug x86|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						UsePrecompiledHeader="1"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\src\symbol_array.cpp"
@@ -404,10 +380,6 @@
 			</File>
 			<File
 				RelativePath=".\dirent.h"
-				>
-			</File>
-			<File
-				RelativePath="..\common\sr-convert\dsp.h"
 				>
 			</File>
 			<File
