--- a/configure.ac
+++ b/configure.ac
@@ -1,14 +1,14 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-#AC_PREREQ(2.60)
-AC_INIT(ekho, 8.7, hgneng at gmail.com)
+#AC_PREREQ([2.71])
+AC_INIT([ekho],[8.7],[hgneng at gmail.com])
 AC_CONFIG_AUX_DIR([.])
 AM_PROG_AR
 AM_INIT_AUTOMAKE([-Wall foreign 1.9 tar-pax subdir-objects])
 AM_CONFIG_HEADER(config.h)
 AC_CONFIG_MACRO_DIR([m4])
-AC_PROG_LIBTOOL
+LT_INIT
 
 # Checks for programs.
 AC_PROG_CXX
@@ -23,7 +23,15 @@ AC_CHECK_LIB([pthread], [main])
 
 # Checks for header files.
 AC_HEADER_DIRENT
-AC_HEADER_STDC
+m4_warn([obsolete],
+[The preprocessor macro `STDC_HEADERS' is obsolete.
+  Except in unusual embedded environments, you can safely include all
+  ISO C90 headers unconditionally.])dnl
+# Autoupdate added the next two lines to ensure that your configure
+# script's behavior did not change.  They are probably safe to remove.
+AC_CHECK_INCLUDES_DEFAULT
+AC_PROG_EGREP
+
 AC_CHECK_HEADERS([locale.h stdlib.h string.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
@@ -86,8 +94,7 @@ AS_IF([test "x$with_pulseaudio" != xno],
             [])])
 
 AC_ARG_ENABLE(speechd,
-        [AC_HELP_STRING([--enable-speechd],
-            [Enable speech-dispatcher API])],
+        [AS_HELP_STRING([--enable-speechd],[Enable speech-dispatcher API])],
         [AM_CONDITIONAL(ENABLE_SPEECHD, true)],
         [AM_CONDITIONAL(ENABLE_SPEECHD, false)]
         )
@@ -95,8 +102,7 @@ AC_ARG_ENABLE(speechd,
 AC_SUBST([LIB_FESTIVAL])
 AC_SUBST([CFLAG_FESTIVAL])
 AC_ARG_ENABLE(festival,
-        [AC_HELP_STRING([--enable-festival],
-            [synthesize English through Festival])],
+        [AS_HELP_STRING([--enable-festival],[synthesize English through Festival])],
         [AC_CHECK_LIB([ncurses], [main],
           [
 #AC_DEFINE(ENABLE_FESTIVAL,,[Enable Festival])
@@ -126,6 +132,17 @@ AC_ARG_ENABLE(festival,
         ],
         [LIB_FESTIVAL=""
          CFLAG_FESTIVAL=""]
+        )
+
+LIB_MUSICXML=""
+AC_SUBST([LIB_MUSICXML])
+AC_ARG_ENABLE(musicxml,
+        [AS_HELP_STRING([--enable-musicxml],[Enable musicxml])],
+        [AC_DEFINE(ENABLE_MUSICXML,,[Enable musicxml])
+         LIB_MUSICXML="-lffts -lopus -lmlpack -larmadillo -lpitch_detection"
+         AM_CONDITIONAL(ENABLE_MUSICXML, true)
+        ],
+        [AM_CONDITIONAL(ENABLE_MUSICXML, false)]
         )
 
 CFLAG_FRISO=""
